--- a/www/index.html
+++ b/www/index.html
@@ -15,8 +15,9 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
+		<link href="css/style.css" rel="stylesheet" type='text/css'>
     <link href="css/scrolling-nav.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+
 
 		<!-- Fonts -->
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
@@ -31,7 +32,6 @@
 </head>
 
 <!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
-
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     <!-- Navigation -->
@@ -48,8 +48,8 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav welcome-text">
+            <div class="collapse navbar-collapse navbar-ex1-collapse test-font">
+                <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a class="page-scroll" href="#page-top"></a>
@@ -76,17 +76,23 @@
         <!-- /.container -->
     </nav>
 
+
     <!-- Intro Section -->
     <section id="intro" class="intro-section">
         <div class="container">
+
+
             <div class="row" style="margin-top:-90px">
                 <div class="col-lg-12">
-									<div class="intro-message title-text">
-										  Beth and Eugene <br /></br>
-											Sunday 2nd October 2016 <br /></br>
-											Noci - Puglia - Italy
-											<a class="page-scroll" href="#rsvp" style="color:whitesmoke"><h2>RSVP by 30th August</h2></a>
-									</div>
+									<div class="intro-message-title title-text">
+
+										  Beth and Eugene</br>
+
+									Sunday 2nd October 2016 <br />
+									Noci - Puglia - Italy<br />
+								</div>
+
+										<a class="page-scroll intro-message-subtitle" href="#rsvp" style="color:whitesmoke">RSVP by 30th August</a>
 									<div class="navicon-be">
 										<a class="page-scroll" href="#hello" style"font-size:50px">
 												<i class="glyphicon glyphicon-menu-down" style="color:whitesmoke"></i>
@@ -121,9 +127,9 @@
 
                   <p class="welcome-text">
 
-									Dearly Beloved <br /><br />
-You are gathered here today to witness further details about our wedding in Italy <br /> <br />The aim is to reveal just enough for you to suitably plan ahead and look forward to joining us on our big day <br /> <br />
-Both the wedding and reception will take place on Sunday, 2 October 2016 in and around the city of Noci, a really lovely place that we have become very fond of and are excited to share with you <br /><br />
+									Dearly Beloved <br />
+You are gathered here today to witness further details about our wedding in Italy <br />The aim is to reveal just enough for you to suitably plan ahead and look forward to joining us on our big day <br /> <br />
+Both the wedding and reception will take place on Sunday, 2 October 2016 in and around the town of Noci, a really lovely place that we have become very fond of and are excited to share with you <br /><br />
 Ciao!
 Beth & Eugene
 xx
@@ -144,7 +150,7 @@ xx
             <div class="row">
             <div class="row">
                 <!-- <div class="col-lg-12"> -->
-                <div class="col-lg-12 travel-header-text">
+                <div class="col-lg-12 section-header-text">
                     Travel and Accommodation
                 </div>
 							</div>
@@ -155,14 +161,14 @@ xx
 					</div>
 				</div>
 
-        <div class="col-md-8 travel-subsection welcome-text">
+        <div class="col-md-8 travel-subsection travel-text">
 
 					<p>
-					EasyJet and BA fly from London Gatwick to Bari and Brindisi.  Ryanair also fly from Stansted to Bari</p>
+					EasyJet and BA fly from London Gatwick to Bari and Brindisi.  Ryanair also fly from Stansted to Bari daily.</p>
 
 						<p>There is a taxi service available outside of both airports, however this option can be expensive e.g. approximately 90 Euros from Bari one way.
 					Therefore we suggest trying to share this journey with a group of people where possible.<br /><br />
-Alternatively it is possible to arrange a dedicated return transfer through our planners, depending on flight arrival/departure times. If you are interested in this, please email <a href>betheug@gmail.com</a> by
+Alternatively it is possible to arrange a dedicated return transfer through our planners, depending on flight arrival/departure times. If you are interested in this, please email <a href="mailto:betheug@gmail.com">betheug@gmail.com</a> by
 30 August and we will enquire.</p>
 
 	<p>
@@ -171,10 +177,10 @@ If you are planning to stay longer in Puglia and wish to explore the region furt
 
 For hotels and accommodation, we have managed to agree a special rate at the following locations
 </br>
-</br>
+
 <ul>
 	<li>
-		<a href="http://www.santarosarelais.it/">Santa Rosa Relais </a>
+		<a href="http://www.santarosarelais.it/index.php?lang=eng">Santa Rosa Relais </a>
 	</li>
 	<li>
 	<a href="https://www.alpharooms.com/dimora_intini_in_noci.aspx">Dimora Intini</a>
@@ -206,34 +212,45 @@ This rate is available from Friday 30 September to Sunday 2 October inclusive. T
     <section id="theday" class="theday-section">
         <div class="container">
             <div class="row">
-                <!-- <div class="col-lg-12"> -->
-								<!-- <div class="row"> -->
-								<img class="img-rounded img-responsive theday-icon" src="img/eandb.png" alt="">
-								<div class="travel-header-text">
-									  What's Happening
-								<!-- </div> -->
+                <div class="col-md-3 col-xs-6">
+										<img class="img-rounded img-responsive theday-icon-left" src="img/eandb.png" alt="">
 								</div>
-								<!-- <img class="img-rounded img-responsive theday-icon" src="img/eandb.png" alt=""> -->
+                <div class="col-md-6 col-xs-6">
+									<div class="section-header-text">
+											What's Happening
+									<!-- </div> -->
+									</div>
+								</div>
+								<div class="col-md-3 col-xs-6">
+										<img class="img-rounded img-responsive theday-icon-right" src="img/eandb.png" alt="">
+								</div>
+								<!-- <div class="row"> -->
 
-                <div class="col-lg-12">
-										<h2> Saturday 1st October </h2>
-											<h3>20:00</h3>
+
+								<!-- <img class="img-rounded img-responsive theday-icon" src="img/eandb.png" alt=""> -->
+								</div>
+
+ 	  					<div class="row">
+                <div class="col-lg-12 theday-text">
+										<h1> Saturday 1st October </h1>
+											<h2>20:00</h2>
 											We are planning a pre-wedding dinner and a few quiet drinks in Noci, the night before the wedding.
-													<br /><br />
+													<br />
 											If you wish to join us please let us know, more details to follow soon.
 													<br />
-					<h2> Sunday 2nd October </h2>
+					<h1> Sunday 2nd October </h1>
 
-											<h3>13:00</h3>
+											<h2>13:00</h2>
 											Wedding ceromony at The Chiostro, Noci Old Town. This is walking distance from all the hotels and apartments
 
 
-										 <h3>14:00</h3>
+										 <h2>14:00</h2>
 										 Transport from Noci Old Town to Masseria, the reception venue
-										  <h3>15:00</h3>
-										  <h3>17:00</h3>
-										  <h3>20:00</h3>
+										  <h2>15:00</h2>
+										  <h2>17:00</h2>
+										  <h2>20:00</h2>
                 </div>
+								</div>
             </div>
 						<div class="navicon-be">
 							<a class="page-scroll" href="#rsvp" style="font-size:50px">
@@ -246,44 +263,53 @@ This rate is available from Friday 30 September to Sunday 2 October inclusive. T
 		<section id="rsvp" class="rsvp-section">
 				<div class="container">
 						<div class="row">
-								<div class="col-lg-12 travel-header-text" style="margin-top:-90px">
+								<div class="col-lg-12 section-header-text" style="margin-top:-90px">
 										RSVP
 								</div>
 
 						</div>
+						<div class="panel panel-default rsvp-info">
+
+							<div class="panel-body">
+								We really hope you can make it, please let us know by emailing us using the form below. If you have any specific dietary requirements jot them down as well.  <br /> <h2>Gifts</h2>  You coming to our wedding is a gift enough, but if you would like to make a donation towards our honeymoon it would be appreciated
+							</div>
+
+						</div>
 						<div class="col-lg-12">
 
-							<!-- <div class="jumbotron"> -->
 
-	<form id="mailform" onsubmit="return false" method="post" action="email.php">
-		<div class="input-group">
-			<!-- <label for="exampleInputName1">Your Name</label> -->
-			 <span class="input-group-addon" id="basic-addon1">Name</span>
-			<input type="text" class="form-control" id="exampleInputName1" placeholder="">
-			</div>
-			<br />
-			<div class="input-group">
-			<!-- <label for="exampleInputEmail1">Your Email</label> -->
-				 <span class="input-group-addon" id="basic-addon1">Email</span>
-			<input type="email" class="form-control" id="exampleInputEmail1" placeholder="">
-			</div>
-			<br />
-			<div class="btn-group btn-group-lg" role="group" aria-label="...">
-				<button type="button" class="btn btn-default">Yes We're There</button>
-			   <button type="button" class="btn btn-default">No Sorry We Can't Make It</button>
-			 </div>
-			 <br />
-			 <br />
-			<div class="form-group">
-			<label for="exampleInputMessage1"></label>
-			<!-- <span class="input-group-addon" id="basic-addon1">Your Message</span> -->
-			<textarea rows="5" cols="5" class="form-control" id="exampleInputMessage1" placeholder="Your Message">
-			</textarea>
+						<div class="rsvp-form">
+							<form id="mailform" onsubmit="return false" method="post" action="php/email.php">
+								<div class="input-group input-group-lg">
+									<!-- <label for="exampleInputName1">Your Name</label> -->
+									 <span class="input-group-addon" id="basic-addon1">Name</span>
+									<input type="text" id="name" class="form-control" placeholder="">
+									</div>
+									<br />
+									<div class="input-group input-group-lg">
+									<!-- <label for="exampleInputEmail1">Your Email</label> -->
+										 <span class="input-group-addon" id="basic-addon1">Email</span>
+									<input type="email" id="email" class="form-control" placeholder="">
+									</div>
+									<br />
+									<div class="btn-group btn-group-lg" role="group" aria-label="...">
+										 <button type="button" id="yesBtn" class="btn btn-default">Yes We're There</button>
+									   <button type="button" id="noBtn" class="btn btn-default">No Sorry We Can't Make It</button>
+									</div>
+									<br />
+									<br />
+									<div id="formResp">
+									</div>
+									<div class="form-group">
 
-			</div>
-			<button id="submitForm" type="submit" class="btn btn-default">Send Email</button>
-			</form>
+										<textarea id="message" class="form-control" rows="3" placeholder="Your Message"> </textarea>
 
+									</div>
+									<button id="submitForm" type="submit" class="btn btn-lg">Send Email</button>
+									</form>
+						</div>
+
+						<p id="feedback"><?php echo $feedback ?></p>
 
 	</div>
 
@@ -295,15 +321,18 @@ This rate is available from Friday 30 September to Sunday 2 October inclusive. T
 		</section>
 
     <!-- Info Section -->
-    <section id="info" class="info-section" style="font-family: 'Open Sans', arial, serif">
+    <section id="info" class="info-section">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 travel-header-text" style="margin-top:-90px">
+            <div class="row test-font">
+                <div class="col-lg-12 section-header-text" style="margin-top:-90px">
                     Puglia details
                 </div>
-								<p>loads of details here
+								<p>loads of details here soon
 								</p>
             </div>
+						<div class="row">
+
+						</div>
 
 						<a class="page-scroll" href="#page-top" style="font-size:50px">
 
