--- a/www/response_email_yes.html
+++ b/www/response_email_yes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-	<link href="http://127.0.0.1/css/style.css" rel="stylesheet" type='text/css'>
+	<link href="http://bethandeugene.com/css/style.css" rel="stylesheet" type='text/css'>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <title>Yes We're In</title>
 </head>
@@ -10,7 +10,7 @@
   <h1>Wayhay You're Coming!</h1>
   <div align="center">
     <!-- <a href="https://github.com/PHPMailer/PHPMailer/">-->
-		<img src="http://127.0.0.1/img/eandb.png" height="400px" width="auto" alt="Beth and Eugene">
+		<img src="http://bethandeugene.com/img/eandb.png" height="400px" width="auto" alt="Beth and Eugene">
   </div>
   <p style="font-size:20px"><b>Any questions at all just drop us a line betheug@gmail.com
 		and we'll get straight to it!  <br /> <br /> See you in October, Beth and Eugene xx</b>
