removed extra space in form message field

--- a/www/index.html
+++ b/www/index.html
@@ -169,17 +169,19 @@ xx
 					<p>
 					EasyJet and BA fly from London Gatwick to Bari and Brindisi.  Ryanair also fly from Stansted to Bari daily.</p>
 
-						<p>There is a taxi service available outside of both airports, however this option can be expensive e.g. approximately 90 Euros from Bari one way.
-					Therefore we suggest trying to share this journey with a group of people where possible.<br /><br />
+						<p>There is a taxi service available outside of both airports, however this option can be expensive e.g. approximately €90 from Bari one way.
+					Therefore we suggest trying to share this journey with a group of people where possible.</p>
+					<p>
+
 Alternatively it is possible to arrange a dedicated return transfer through our planners, depending on flight arrival/departure times. If you are interested in this, please email <a href="mailto:betheug@gmail.com">betheug@gmail.com</a> by
 30 August and we will enquire.</p>
 
 	<p>
 If you are planning to stay longer in Puglia and wish to explore the region further, we strongly recommend hiring a car.
 </p>
-
-For hotels and accommodation, we have managed to agree a special rate at the following locations
-</br>
+	<p>
+For hotels and accommodation, we have agreed reduced rates at 2 lovely hotels and 4 small self contained apartments.
+</p>
 
 <ul>
 	<li>
@@ -193,14 +195,20 @@ For hotels and accommodation, we have managed to agree a special rate at the fol
 	</li>
 </ul>
 
-
-These are a selection of small hotels and apartments in the Old Town of Noci, close by to all the amenities and the wedding venues.
-There are xxxx rooms on site, able to accommodate xxxx guests.
-The price per room is xxxx and includes breakfast.
-This rate is available from Friday 30 September to Sunday 2 October inclusive. To book, please contact xxxx directly and quote "Cross Wedding".
-
+	<p>
+All accommodation is located in the Old Town of Noci and close to local amenities and importantly walking distance from the wedding venue.
+	</p>
+	<p>
+Prices range from €50-€130 per room per night from Single up to Quadruple size and is Bed and Breakfast.  There are 19 rooms across the all the accommodation and total able to accommodate up to 40 guests.
+	</p>
+<p>
+	This rate is available for 3 nights, from Friday 30 September to Monday 3 October inclusive. To book, please contact Mr Marco Amatulli directly at Santa Rosa who will coordinate the booking
+	</p>
+	<p>
+It would be helpful if you can let us know if you are not planning to use these accommodation options so we can keep track of numbers.
+</p>
 				</div>
-			</p>
+
       </div>
 			<div class="row">
 				<a class="page-scroll" href="#theday" style="font-size:50px">
@@ -305,7 +313,7 @@ This rate is available from Friday 30 September to Sunday 2 October inclusive. T
 									</div>
 									<div class="form-group">
 
-										<textarea id="message" class="form-control" rows="3" name="message" placeholder="Your Message"> </textarea>
+										<textarea id="message" class="form-control" rows="3" name="message" placeholder="Your Message"></textarea>
 
 									</div>
 									<!-- //data-toggle="collapse" data-target="#collapseExample" -->
