Accommodation and info updates.  email form validation updated

--- a/www/index.html
+++ b/www/index.html
@@ -70,7 +70,7 @@
                         <a class="page-scroll" href="#rsvp">RSVP</a>
                     </li>
 										<li>
-												<a class="page-scroll" href="#info">Puglia Info</a>
+												<a class="page-scroll" href="#info">More Info</a>
 										</li>
                 </ul>
             </div>
@@ -92,10 +92,10 @@
 										  Beth and Eugene</br>
 
 									Sunday 2nd October 2016 <br />
-									Noci - Puglia - Italy<br />
+									Noci - Puglia - Italy
 								</div>
 
-										<a class="page-scroll intro-message-subtitle" href="#rsvp" style="color:whitesmoke">RSVP by 30th August</a>
+										<a class="page-scroll intro-message-subtitle" href="#rsvp" style="color:whitesmoke">RSVP by 1st August</a>
 									<div class="navicon-be">
 										<a class="page-scroll" href="#hello" style"font-size:50px">
 												<i class="glyphicon glyphicon-menu-down" style="color:whitesmoke"></i>
@@ -137,10 +137,12 @@ Ciao!
 Beth & Eugene
 xx
 									</p>
+									<div class="navicon-be">
 										<a class="page-scroll" href="#travel" style="font-size:50px">
-											<i class="glyphicon glyphicon-menu-down" style="color:grey"></i>
+											<i class="glyphicon glyphicon-menu-down" style="color:whitesmoke"></i>
 										</a>
 
+</div>
                 </div>
 	</div>
             </div>
@@ -173,8 +175,8 @@ xx
 					Therefore we suggest trying to share this journey with a group of people where possible.</p>
 					<p>
 
-Alternatively it is possible to arrange a dedicated return transfer through our planners, depending on flight arrival/departure times. If you are interested in this, please email <a href="mailto:betheug@gmail.com">betheug@gmail.com</a> by
-30 August and we will enquire.</p>
+					If there is enough interest and guests are arriving and leaving on similar timed flights, it is a possibility that a dedicated return transfer can be arranged to and from Noci.  Please could you let us know by 15th July if you are interested in this.
+</p>
 
 	<p>
 If you are planning to stay longer in Puglia and wish to explore the region further, we strongly recommend hiring a car.
@@ -199,10 +201,10 @@ For hotels and accommodation, we have agreed reduced rates at 2 lovely hotels an
 All accommodation is located in the Old Town of Noci and close to local amenities and importantly walking distance from the wedding venue.
 	</p>
 	<p>
-Prices range from €50-€130 per room per night from Single up to Quadruple size and is Bed and Breakfast.  There are 19 rooms across the all the accommodation and total able to accommodate up to 40 guests.
+Prices range from €50-€130 per room per night from Single up to Quadruple size and all include breakfast.  There are 19 rooms available, which can accommodate up to 50 guests.
 	</p>
 <p>
-	This rate is available for 3 nights, from Friday 30 September to Monday 3 October inclusive. To book, please contact Mr Marco Amatulli directly at Santa Rosa who will coordinate the booking
+	These rates are available for 3 nights, from Friday 30 September to Monday 3 October inclusive. To book, please contact <b><a href="mailto:direzione@santarosarelais.it">Mr Marco Amatulli</a></b> directly at Santa Rosa quoting <b>Cross Wedding</b> who will coordinate the booking.
 	</p>
 	<p>
 It would be helpful if you can let us know if you are not planning to use these accommodation options so we can keep track of numbers.
@@ -229,19 +231,17 @@ It would be helpful if you can let us know if you are not planning to use these 
                 <div class="col-md-6">
 									<div class="section-header-text">
 											What's Happening
-									<!-- </div> -->
+											<img class="img-circle img-responsive theday-icon-centre" src="img/xian.jpg" alt="">
 									</div>
 								</div>
 								<div class="col-md-3 col-xs-6">
 										<img class="img-rounded img-responsive theday-icon-right" src="img/eandb.png" alt="">
 								</div>
-								<!-- <div class="row"> -->
 
-
-								<!-- <img class="img-rounded img-responsive theday-icon" src="img/eandb.png" alt=""> -->
 								</div>
 
  	  					<div class="row">
+
                 <div class="col-lg-12 theday-text">
 										<h1> Saturday 1st October </h1>
 											<h2>20:00</h2>
@@ -253,15 +253,24 @@ It would be helpful if you can let us know if you are not planning to use these 
 
 											<h2>13:00</h2>
 											Wedding ceromony at The Chiostro, Noci Old Town. This is walking distance from all the hotels and apartments
-
-
-										 <h2>14:00</h2>
-										 Transport from Noci Old Town to Masseria, the reception venue
+											<br />	Transport will be provided from Noci...
 										  <h2>15:00</h2>
-										  <h2>17:00</h2>
+											.. to Masseria Papaperta, the reception venue.
+										  <h2>16:30</h2>
+											Wedding dinner
 										  <h2>20:00</h2>
+											Partay!
+											<h2>22:00</h2>
+											Transport back to Noci
                 </div>
 								</div>
+								<div class="row">
+									<div class="col-md-3 col-xs-6">
+
+									</div>
+								</div>
+
+
             </div>
 						<div class="navicon-be">
 							<a class="page-scroll" href="#rsvp" style="font-size:50px">
@@ -282,7 +291,12 @@ It would be helpful if you can let us know if you are not planning to use these 
 						<div class="panel panel-default rsvp-info">
 
 							<div class="panel-body">
-								We really hope you can make it, please let us know by emailing us using the form below. If you have any specific dietary requirements jot them down as well.  <br /> <h2>Gifts</h2>  You coming to our wedding is a gift enough, but if you would like to make a donation towards our honeymoon it would be appreciated
+								<p>
+									We really hope you can make it, please let us know by emailing us directy or dropping us a message using the form below.</p>
+									<p>
+									If you have any specific dietary requirements we might not know about, please jot them down as well.
+									</p>
+								</p>
 							</div>
 
 						</div>
@@ -292,13 +306,13 @@ It would be helpful if you can let us know if you are not planning to use these 
 						<div class="rsvp-form">
 							<form id="mailform" onsubmit="return false" method="post" action="php/gmail.php">
 								<div class="input-group input-group-lg">
-									<!-- <label for="exampleInputName1">Your Name</label> -->
+
 									 <span class="input-group-addon" id="basic-addon1">Name</span>
 									<input type="text" id="name" name="name" class="form-control" placeholder="">
 									</div>
 									<br />
 									<div class="input-group input-group-lg">
-									<!-- <label for="exampleInputEmail1">Your Email</label> -->
+
 										 <span class="input-group-addon" id="basic-addon1">Email</span>
 									<input type="email" id="email" name="email" class="form-control" placeholder="">
 									</div>
@@ -316,7 +330,6 @@ It would be helpful if you can let us know if you are not planning to use these 
 										<textarea id="message" class="form-control" rows="3" name="message" placeholder="Your Message"></textarea>
 
 									</div>
-									<!-- //data-toggle="collapse" data-target="#collapseExample" -->
 									<button id="submitForm" type="submit"  class="btn btn-default btn-lg">Send Email</button>
 									</form>
 									<br />
@@ -327,32 +340,64 @@ It would be helpful if you can let us know if you are not planning to use these 
   								</div>
 						</div>
 	</div>
-
+<div class="navicon-be">
 						<a class="page-scroll" href="#info" style="font-size:50px">
 
-							<i class="glyphicon glyphicon-menu-down" style="color:grey"></i>
+							<i class="glyphicon glyphicon-menu-down" style="color:whitesmoke"></i>
 						</a>
+					</div>
 				</div>
 		</section>
 
     <!-- Info Section -->
+
     <section id="info" class="info-section">
         <div class="container">
-            <div class="row test-font">
+					<div class="info-background">
+            <div class="row">
                 <div class="col-lg-12 section-header-text" style="margin-top:-90px">
-                    Puglia details
+                    More Information
                 </div>
-								<p>loads of details here soon
-								</p>
+								<div class="col-lg-12 theday-text">
+									<h2>Weather</h2>
+									<p>Like you, we are hoping for good weather on the day, it's Italy of course!  However it is important to note that October is the low-season in Puglia and our reception will be held at a venue inland, where temperatures are generally fresher and likely to drop in the evening.
+									</p>
+								</div>
+								<div class="col-lg-12 theday-text">
+									 <h2>Gifts</h2>
+									 <p>
+										 You coming to our wedding is a gift enough, however if you would like to make a gift donation towards our honeymoon it would be appreciated.
+									 </p>
+									<!--<h3>Food!</h3>
+									<p>Eating out in Puglia is an absolute delight – the food is great and it is really affordable.</p>
+									<p>
+										Take your time to explore Polignano one of the many places nearby. This small town is known for its world-class homemade ice-cream.
+								The town is dotted with small restaurants, fabulous bakeries and little bars. Here are some recommendations:	</p>
+<p>
+	<a href="http://flypolignano.it/">Fly</a> In the middle of Polignano and right by the beach.
+</p>
+<p>
+<a href="https://www.tripadvisor.co.uk/Restaurant_Review-g635875-d3445426-Reviews-Leo_s_Braceria-Polignano_a_Mare_Province_of_Bari_Puglia.html">Leo’s Braceria </a>  Highly rated amongst locals.
+</p>
+<p>
+	<a href="https://www.tripadvisor.co.uk/Restaurant_Review-g635875-d1473008-Reviews-Da_Tuccino-Polignano_a_Mare_Province_of_Bari_Puglia.html">Da Tuccino</a>
+</p>
+<p>
+	<a href="https://www.tripadvisor.co.uk/Restaurant_Review-g635875-d1911655-Reviews-Osteria_Di_Chichibio-Polignano_a_Mare_Province_of_Bari_Puglia.html">Il Chichibio</a> Michelin-starred Restaurant for a splurge
+</p> -->
+
+
+								</div>
+
             </div>
 						<div class="row">
 
 						</div>
-
 						<a class="page-scroll" href="#page-top" style="font-size:50px">
 
 							<i class="glyphicon glyphicon-menu-down" style="color:grey"></i>
 						</a>
+						</div>
         </div>
     </section>
 
