--- a/www/response_email_no.html
+++ b/www/response_email_no.html
@@ -9,10 +9,9 @@
 <div style="width: 640px; text-align:center" class="test-font">
   <h1>Sorry you can't make it</h1>
   <div align="center">
-    <!-- <a href="https://github.com/PHPMailer/PHPMailer/">-->
 		<img src="http://bethandeugene.com/img/eandb.png" height="400px" width="auto" alt="Beth and Eugene">
   </div>
-  <p style="font-size:20px"><b>Sorry we won't see you in October, but let's try and catch up soon <br /> <br /> Beth and Eugene xx</b>
+  <p style="font-size:20px"><b>Sorry we won't see you in October but let's try and catch up soon <br /> <br /> Beth and Eugene xx</b>
 	</p>
 </div>
 </body>
