css height tweaks to ensure all on one page

--- a/www/index.html
+++ b/www/index.html
@@ -255,7 +255,7 @@ It would be helpful if you can let us know if you are not planning to use these 
 											Wedding ceromony at The Chiostro, Noci Old Town. This is walking distance from all the hotels and apartments
 											<br />	Transport will be provided from Noci...
 										  <h2>15:00</h2>
-											.. to Masseria Papaperta, the reception venue.
+											.. to the reception venue.
 										  <h2>16:30</h2>
 											Wedding dinner
 										  <h2>20:00</h2>
