--- a/www/index.html
+++ b/www/index.html
@@ -292,7 +292,7 @@ It would be helpful if you can let us know if you are not planning to use these 
 
 							<div class="panel-body">
 								<p>
-									We really hope you can make it, please let us know by emailing us directy or dropping us a message using the form below.</p>
+									We really hope you can make it, please let us know by emailing us directly or dropping us a message using the form below.</p>
 									<p>
 									If you have any specific dietary requirements we might not know about, please jot them down as well.
 									</p>
