Moved RSVP to bottom and updated menu.  Changed last icon to up arrow.  Dietary requirements moved to info page

--- a/www/index.html
+++ b/www/index.html
@@ -66,12 +66,12 @@
                     <li>
                         <a class="page-scroll" href="#theday">The Day</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#rsvp">RSVP</a>
-                    </li>
 										<li>
 												<a class="page-scroll" href="#info">More Info</a>
 										</li>
+										<li>
+                        <a class="page-scroll" href="#rsvp">RSVP</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -95,7 +95,7 @@
 									Noci - Puglia - Italy
 								</div>
 
-										<a class="page-scroll intro-message-subtitle" href="#rsvp" style="color:whitesmoke">RSVP by 1st August</a>
+										<a class="page-scroll intro-message-subtitle" href="#rsvp" style="color:whitesmoke">RSVP by 15th August</a>
 									<div class="navicon-be">
 										<a class="page-scroll" href="#hello" style"font-size:50px">
 												<i class="glyphicon glyphicon-menu-down" style="color:whitesmoke"></i>
@@ -273,12 +273,71 @@ It would be helpful if you can let us know if you are not planning to use these 
 
             </div>
 						<div class="navicon-be">
-							<a class="page-scroll" href="#rsvp" style="font-size:50px">
+							<a class="page-scroll" href="#info" style="font-size:50px">
 								<i class="glyphicon glyphicon-menu-down" style="color:whitesmoke"></i>
 							</a>
 						</div>
         </div>
     </section>
+
+
+    <!-- Info Section -->
+
+    <section id="info" class="info-section">
+        <div class="container">
+					<div class="info-background">
+            <div class="row">
+                <div class="col-lg-12 section-header-text" style="margin-top:-90px">
+                    More Information
+                </div>
+								<div class="col-lg-12 theday-text">
+									<h2>Weather</h2>
+									<p>Like you, we are hoping for good weather on the day, it's Italy of course!  However it is important to note that October is the low-season in Puglia and our reception will be held at a venue inland, where temperatures are generally fresher and likely to drop in the evening.
+									</p>
+								</div>
+								<div class="col-lg-12 theday-text">
+									 <h2>Gifts</h2>
+									 <p>
+										 You coming to our wedding is a gift enough, however if you would like to make a gift donation towards our honeymoon it would be appreciated.
+									 </p>
+									<!--<h3>Food!</h3>
+									<p>Eating out in Puglia is an absolute delight – the food is great and it is really affordable.</p>
+									<p>
+										Take your time to explore Polignano one of the many places nearby. This small town is known for its world-class homemade ice-cream.
+								The town is dotted with small restaurants, fabulous bakeries and little bars. Here are some recommendations:	</p>
+<p>
+	<a href="http://flypolignano.it/">Fly</a> In the middle of Polignano and right by the beach.
+</p>
+<p>
+<a href="https://www.tripadvisor.co.uk/Restaurant_Review-g635875-d3445426-Reviews-Leo_s_Braceria-Polignano_a_Mare_Province_of_Bari_Puglia.html">Leo’s Braceria </a>  Highly rated amongst locals.
+</p>
+<p>
+	<a href="https://www.tripadvisor.co.uk/Restaurant_Review-g635875-d1473008-Reviews-Da_Tuccino-Polignano_a_Mare_Province_of_Bari_Puglia.html">Da Tuccino</a>
+</p>
+<p>
+	<a href="https://www.tripadvisor.co.uk/Restaurant_Review-g635875-d1911655-Reviews-Osteria_Di_Chichibio-Polignano_a_Mare_Province_of_Bari_Puglia.html">Il Chichibio</a> Michelin-starred Restaurant for a splurge
+</p> -->
+
+
+								</div>
+	<div class="col-lg-12 theday-text">
+								<h2> Dietary Requirements</h2>
+								<p>
+							If you have any allergies, specific dietary requirements or other foods you cannot eat and that we might not know about, please note these down when replying.
+							</p>
+	</div>
+            </div>
+						<div class="row">
+
+						</div>
+						<a class="page-scroll" href="#rsvp" style="font-size:50px">
+
+							<i class="glyphicon glyphicon-menu-down" style="color:grey"></i>
+						</a>
+						</div>
+        </div>
+    </section>
+
 		<!-- RSVP Section -->
 		<section id="rsvp" class="rsvp-section">
 				<div class="container">
@@ -291,11 +350,8 @@ It would be helpful if you can let us know if you are not planning to use these 
 						<div class="panel panel-default rsvp-info">
 
 							<div class="panel-body">
-								<p>
-									We really hope you can make it, please let us know by emailing us directly or dropping us a message using the form below.</p>
-									<p>
-									If you have any specific dietary requirements we might not know about, please jot them down as well.
-									</p>
+								<p style="text-align:center">
+									We really hope you can make it, please let us know by emailing us directly or dropping us a message using the form below.
 								</p>
 							</div>
 
@@ -341,65 +397,13 @@ It would be helpful if you can let us know if you are not planning to use these 
 						</div>
 	</div>
 <div class="navicon-be">
-						<a class="page-scroll" href="#info" style="font-size:50px">
+						<a class="page-scroll" href="#page-top" style="font-size:50px">
 
-							<i class="glyphicon glyphicon-menu-down" style="color:whitesmoke"></i>
+							<i class="glyphicon glyphicon-menu-up" style="color:whitesmoke"></i>
 						</a>
 					</div>
 				</div>
 		</section>
-
-    <!-- Info Section -->
-
-    <section id="info" class="info-section">
-        <div class="container">
-					<div class="info-background">
-            <div class="row">
-                <div class="col-lg-12 section-header-text" style="margin-top:-90px">
-                    More Information
-                </div>
-								<div class="col-lg-12 theday-text">
-									<h2>Weather</h2>
-									<p>Like you, we are hoping for good weather on the day, it's Italy of course!  However it is important to note that October is the low-season in Puglia and our reception will be held at a venue inland, where temperatures are generally fresher and likely to drop in the evening.
-									</p>
-								</div>
-								<div class="col-lg-12 theday-text">
-									 <h2>Gifts</h2>
-									 <p>
-										 You coming to our wedding is a gift enough, however if you would like to make a gift donation towards our honeymoon it would be appreciated.
-									 </p>
-									<!--<h3>Food!</h3>
-									<p>Eating out in Puglia is an absolute delight – the food is great and it is really affordable.</p>
-									<p>
-										Take your time to explore Polignano one of the many places nearby. This small town is known for its world-class homemade ice-cream.
-								The town is dotted with small restaurants, fabulous bakeries and little bars. Here are some recommendations:	</p>
-<p>
-	<a href="http://flypolignano.it/">Fly</a> In the middle of Polignano and right by the beach.
-</p>
-<p>
-<a href="https://www.tripadvisor.co.uk/Restaurant_Review-g635875-d3445426-Reviews-Leo_s_Braceria-Polignano_a_Mare_Province_of_Bari_Puglia.html">Leo’s Braceria </a>  Highly rated amongst locals.
-</p>
-<p>
-	<a href="https://www.tripadvisor.co.uk/Restaurant_Review-g635875-d1473008-Reviews-Da_Tuccino-Polignano_a_Mare_Province_of_Bari_Puglia.html">Da Tuccino</a>
-</p>
-<p>
-	<a href="https://www.tripadvisor.co.uk/Restaurant_Review-g635875-d1911655-Reviews-Osteria_Di_Chichibio-Polignano_a_Mare_Province_of_Bari_Puglia.html">Il Chichibio</a> Michelin-starred Restaurant for a splurge
-</p> -->
-
-
-								</div>
-
-            </div>
-						<div class="row">
-
-						</div>
-						<a class="page-scroll" href="#page-top" style="font-size:50px">
-
-							<i class="glyphicon glyphicon-menu-down" style="color:grey"></i>
-						</a>
-						</div>
-        </div>
-    </section>
 
 
     <!-- jQuery -->
