accom and the day updates

--- a/www/index.html
+++ b/www/index.html
@@ -175,9 +175,9 @@ xx
 					Therefore we suggest trying to share this journey with a group of people where possible.</p>
 					<p>
 
-					If there is enough interest and guests are arriving and leaving on similar timed flights, it is a possibility that a dedicated return transfer can be arranged to and from Noci.  Please could you let us know by 15th July if you are interested in this.
-</p>
+					If there is enough interest and guests are arriving and leaving on similar timed flights, it is a possibility that a dedicated return transfer can be arranged to and from Noci. </p>
 
+				<p>Please could you let us know by <b>15th July</b> if you are interested in this. 	</p>
 	<p>
 If you are planning to stay longer in Puglia and wish to explore the region further, we strongly recommend hiring a car.
 </p>
@@ -247,7 +247,7 @@ It would be helpful if you can let us know if you are not planning to use these 
 											<h2>20:00</h2>
 											We are planning a pre-wedding dinner and a few quiet drinks in Noci, the night before the wedding.
 													<br />
-											If you wish to join us please let us know, more details to follow soon.
+											If you wish to join us, please let us know in your reply and details will follow.
 													<br />
 					<h1> Sunday 2nd October </h1>
 
@@ -260,7 +260,7 @@ It would be helpful if you can let us know if you are not planning to use these 
 											Wedding dinner
 										  <h2>20:00</h2>
 											Partay!
-											<h2>22:00</h2>
+											<h2>22:30ish</h2>
 											Transport back to Noci
                 </div>
 								</div>
@@ -330,10 +330,12 @@ It would be helpful if you can let us know if you are not planning to use these 
 						<div class="row">
 
 						</div>
+						<div class="navicon-be">
 						<a class="page-scroll" href="#rsvp" style="font-size:50px">
 
-							<i class="glyphicon glyphicon-menu-down" style="color:grey"></i>
+							<i class="glyphicon glyphicon-menu-down" style="color:whitesmoke"></i>
 						</a>
+						</div>
 						</div>
         </div>
     </section>
