--- a/www/index.html
+++ b/www/index.html
@@ -130,9 +130,9 @@
 
                   <p class="welcome-text">
 
-									Dearly Beloved <br />
-You are gathered here today to witness further details about our wedding in Italy <br />The aim is to reveal just enough for you to suitably plan ahead and look forward to joining us on our big day <br /> <br />
-Both the wedding and reception will take place on Sunday, 2 October 2016 in and around the town of Noci, a really lovely place that we have become very fond of and are excited to share with you <br /><br />
+									Dearly Beloved,  <br />
+You are gathered here today to witness further details about our wedding in Italy. <br />The aim is to reveal just enough for you to suitably plan ahead and look forward to joining us on our big day. <br /> <br />
+Both the wedding and reception will take place on Sunday, 2 October 2016 in and around the town of Noci, a really lovely place that we have become very fond of and are excited to share with you. <br /><br />
 Ciao!
 Beth & Eugene
 xx
@@ -177,23 +177,23 @@ xx
 
 					If there is enough interest and guests are arriving and leaving on similar timed flights, it is a possibility that a dedicated return transfer can be arranged to and from Noci. </p>
 
-				<p>Please could you let us know by <b>15th July</b> if you are interested in this. 	</p>
+				<p>Please could you email us by <b>1st August </b> if you are interested in this.</p>
 	<p>
 If you are planning to stay longer in Puglia and wish to explore the region further, we strongly recommend hiring a car.
 </p>
 	<p>
-For hotels and accommodation, we have agreed reduced rates at 2 lovely hotels and 4 small self contained apartments.
+For hotels and accommodation, we have agreed reduced rates at 2 lovely hotels and 4 small self-contained apartments.
 </p>
 
 <ul>
 	<li>
-		<a href="http://www.santarosarelais.it/index.php?lang=eng">Santa Rosa Relais </a>
+		<a href="http://www.santarosarelais.it/index.php?lang=eng" target="_blank">Santa Rosa Relais </a>
 	</li>
 	<li>
-	<a href="https://www.alpharooms.com/dimora_intini_in_noci.aspx">Dimora Intini</a>
+	<a href="https://www.alpharooms.com/dimora_intini_in_noci.aspx" target="_blank">Dimora Intini</a>
 	</li>
 	<li>
-		 <a href="http://www.suitesanpietro.it/">Suite San Pietro</a>
+		 <a href="http://www.suitesanpietro.it/" target="_blank">Suite San Pietro</a>
 	</li>
 </ul>
 
@@ -244,15 +244,16 @@ It would be helpful if you can let us know if you are not planning to use these 
 
                 <div class="col-lg-12 theday-text">
 										<h1> Saturday 1st October </h1>
-											<h2>20:00</h2>
+											<h2>Evening</h2>
 											We are planning a pre-wedding dinner and a few quiet drinks in Noci, the night before the wedding.
 													<br />
 											If you wish to join us, please let us know in your reply and details will follow.
 													<br />
+													<br />
 					<h1> Sunday 2nd October </h1>
 
 											<h2>13:00</h2>
-											Wedding ceromony at The Chiostro, Noci Old Town. This is walking distance from all the hotels and apartments
+											Wedding ceromony at The Chiostro, Noci Old Town. This is walking distance from all the hotels and apartments.
 											<br />	Transport will be provided from Noci...
 										  <h2>15:00</h2>
 											.. to the reception venue.
@@ -298,26 +299,8 @@ It would be helpful if you can let us know if you are not planning to use these 
 								<div class="col-lg-12 theday-text">
 									 <h2>Gifts</h2>
 									 <p>
-										 You coming to our wedding is a gift enough, however if you would like to make a gift donation towards our honeymoon it would be appreciated.
+										 You coming to our wedding is a gift enough, however if you would like to make a donation towards our honeymoon it would be appreciated.
 									 </p>
-									<!--<h3>Food!</h3>
-									<p>Eating out in Puglia is an absolute delight – the food is great and it is really affordable.</p>
-									<p>
-										Take your time to explore Polignano one of the many places nearby. This small town is known for its world-class homemade ice-cream.
-								The town is dotted with small restaurants, fabulous bakeries and little bars. Here are some recommendations:	</p>
-<p>
-	<a href="http://flypolignano.it/">Fly</a> In the middle of Polignano and right by the beach.
-</p>
-<p>
-<a href="https://www.tripadvisor.co.uk/Restaurant_Review-g635875-d3445426-Reviews-Leo_s_Braceria-Polignano_a_Mare_Province_of_Bari_Puglia.html">Leo’s Braceria </a>  Highly rated amongst locals.
-</p>
-<p>
-	<a href="https://www.tripadvisor.co.uk/Restaurant_Review-g635875-d1473008-Reviews-Da_Tuccino-Polignano_a_Mare_Province_of_Bari_Puglia.html">Da Tuccino</a>
-</p>
-<p>
-	<a href="https://www.tripadvisor.co.uk/Restaurant_Review-g635875-d1911655-Reviews-Osteria_Di_Chichibio-Polignano_a_Mare_Province_of_Bari_Puglia.html">Il Chichibio</a> Michelin-starred Restaurant for a splurge
-</p> -->
-
 
 								</div>
 	<div class="col-lg-12 theday-text">
