--- a/www/index.html
+++ b/www/index.html
@@ -299,7 +299,7 @@ It would be helpful if you can let us know if you are not planning to use these 
 								<div class="col-lg-12 theday-text">
 									 <h2>Gifts</h2>
 									 <p>
-										 You coming to our wedding is a gift enough, however if you would like to make a donation towards our honeymoon it would be appreciated.
+										 You coming to our wedding is a gift enough, however if you would like to make a donation towards our honeymoon it would be greatly received.
 									 </p>
 
 								</div>
