--- a/www/index.html
+++ b/www/index.html
@@ -306,7 +306,7 @@ It would be helpful if you can let us know if you are not planning to use these 
 	<div class="col-lg-12 theday-text">
 								<h2> Dietary Requirements</h2>
 								<p>
-							If you have any allergies, specific dietary requirements or other foods you cannot eat and that we might not know about, please note these down when replying.
+							If you have any allergies, specific dietary requirements or other foods you cannot eat and that we might not know about, please ensure these are noted down when replying.
 							</p>
 	</div>
             </div>
