--- a/www/index.html
+++ b/www/index.html
@@ -253,7 +253,7 @@ It would be helpful if you can let us know if you are not planning to use these 
 					<h1> Sunday 2nd October </h1>
 
 											<h2>13:00</h2>
-											Wedding ceromony at The Chiostro, Noci Old Town. This is walking distance from all the hotels and apartments.
+											Wedding ceremony at The Chiostro, Noci Old Town. This is walking distance from all the hotels and apartments.
 											<br />	Transport will be provided from Noci...
 										  <h2>15:00</h2>
 											.. to the reception venue.
