Link to map of The Chiostro

--- a/www/index.html
+++ b/www/index.html
@@ -253,7 +253,7 @@ It would be helpful if you can let us know if you are not planning to use these 
 					<h1> Sunday 2nd October </h1>
 
 											<h2>13:00</h2>
-											Wedding ceremony at The Chiostro, Noci Old Town. This is walking distance from all the hotels and apartments.
+											Wedding ceremony at <a href="https://www.google.co.uk/maps/place/Chiostro+delle+Clarisse,+Via+Porta+Putignano,+70015+Noci+BA,+Italy/@40.7956508,17.1223849,19z/data=!4m13!1m7!3m6!1s0x1347b018dd349391:0x107758af93821fb4!2sChiostro+delle+Clarisse,+Via+Porta+Putignano,+70015+Noci+BA,+Italy!3b1!8m2!3d40.7956275!4d17.1226292!3m4!1s0x1347b018dd349391:0x107758af93821fb4!8m2!3d40.7956275!4d17.1226292"  target="_blank">The Chiostro</a>, Noci Old Town. This is walking distance from all the hotels and apartments.
 											<br />	Transport will be provided from Noci...
 										  <h2>15:00</h2>
 											.. to the reception venue.
